@@ -6,7 +6,6 @@
 	font-weight:400;
 	margin:.5em 0;
 }
-
 body
 {
 	color:#626262;
@@ -18,6 +17,10 @@ body
 	padding:0;
 	line-height:1.5em;
 }
+
+h1, h2{ font-size: 20px;font-weight: bold;color: #333;}
+h3, h4{ font-size: 16px;font-weight: bold;color: #333;}
+h5, h6, dt{ font-size: 11px;font-weight: bold;color: #333;}
 
 hr, p, ul, ol, dl, pre, blockquote, address, table, form {
     margin-bottom: 1.6em;
@@ -114,21 +117,21 @@ a, a:hover, a:active, a:link, a:visited
 #GraphicHeader
 {
 	width:100%;
-	background-image:url(https://s3.amazonaws.com/dnncdn/MultiFunction/headerbg_rp.png);
+	background-image:url(i/headerbg_rp.png);
 	background-repeat:repeat-x;
 	min-height:200px;	
 }
 
 #GraphicHeader .page_header
 {
-	background:url(https://s3.amazonaws.com/dnncdn/MultiFunction/headerbg.jpg) no-repeat scroll 50% 0 transparent;
+	background:url(i/headerbg.jpg) no-repeat scroll 50% 0 transparent;
 	height:200px;	
 }
 
 .HeaderGraphic
 {
-	background:url(https://s3.amazonaws.com/dnncdn/MultiFunction/header_graphic.png);
-	width:900px;
+	background:url(i/header_graphic.png);
+	width:960px;
 	height:176px;
 }
 
@@ -161,7 +164,7 @@ a, a:hover, a:active, a:link, a:visited
 
 #ContentWrapper
 {
-	background:#ededed url(https://s3.amazonaws.com/dnncdn/MultiFunction/contentbg_rp.png);
+	background:#ededed url(i/contentbg_rp.png);
 	background-repeat:repeat-x;
 	min-height:100px;
 	background:#;
@@ -211,7 +214,7 @@ a, a:hover, a:active, a:link, a:visited
 .PageFooter
 {
 	width:100%;
-	background-image:url(https://s3.amazonaws.com/dnncdn/MultiFunction/footerbg_rp.png);
+	background-image:url(i/footerbg_rp.png);
 	background-repeat:repeat-x;
 	min-height:359px;
 	max-height:359px;
@@ -220,7 +223,7 @@ a, a:hover, a:active, a:link, a:visited
 .FooterWrapper
 {
 	width:100%;
-	background:url(https://s3.amazonaws.com/dnncdn/MultiFunction/footerbg.jpg) no-repeat scroll 50% 0 transparent;
+	background:url(i/footerbg.jpg) no-repeat scroll 50% 0 transparent;
 	height:359px;
 }
 
@@ -231,7 +234,7 @@ a, a:hover, a:active, a:link, a:visited
 
 .FooterLeftPane, .FooterMidPane, .FooterRightPane
 {
-	width:225px;float:left;
+	width:280px;float:left;
 	padding:0 0 30px 0;
 	margin:0 30px 0 10px;
 	color:#d9d9d9;
@@ -449,7 +452,7 @@ ul.MenuClass img
 }
 #ob_load {
 	-moz-border-radius:5px;
-	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/loading.gif) no-repeat center;
+	background:url(i/ob/loading.gif) no-repeat center;
 	background-color:#fff;
 	border-radius:5px;
 	height:40px;
@@ -467,7 +470,7 @@ ul.MenuClass img
 	padding:10px;
 }
 #ob_close {
-	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png);
+	background:url(i/ob/buttons.png);
 	cursor:pointer;
 	height:30px;
 	left:0;
@@ -509,11 +512,11 @@ ul.MenuClass img
 	z-index:1102;
 }
 #ob_left-ico {
-	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png) center;
+	background:url(i/ob/buttons.png) center;
 	right:10px;
 }
 #ob_right-ico {
-	background:url(http://s3.amazonaws.com/dnncdn/MultiFunction/ob/buttons.png) right;
+	background:url(i/ob/buttons.png) right;
 	left:10px;
 }
 #ob_left:hover,#ob_right:hover { visibility:visible; }
